@@ -12,7 +12,8 @@ Bug fixes:
 	* Fix size of dock widgets when changing between them
 	* BUG 389920 - remove sub-window shadow remnants when closing the project
 	* BUG 428029 - changing font of text label for newer Qt versions
-	* Fix mising settings dialog on macOS
+	* BUG 428813 - full screen not restored (also fixed full screen on macOS)
+	* Fix missing settings dialog on macOS
 	* Parser improvements (found in "Generate Function Values"):
 		* Fix Crash using variable name of pre-defined functions as function ("sin()")
 		* Allow variable names containing function names ("sina")
